# DataBaseExtractor

./: .gitignore  README.md  config_example.json  pyproject.toml
src/db_extractor/: __init__.py  _config.py  _constants.py  _exceptions.py  _version.py  extractor.py
src/db_extractor/connection/: __init__.py  denodo.py  manager.py  oracle.py
src/db_extractor/models/: __init__.py  result.py
src/db_extractor/query/: __init__.py  executor.py  loader.py
src/db_extractor/utils/: __init__.py  monitor.py  normalization.py  path.py  sql.py  validation.py
